<resources>
    <string name="app_name">GS-Store</string>
    <string name="product_price_title">أسعار المنتجات</string>
    <string name="product_details_title">تفاصيل المنتج</string>
    <string name="scan_code">إمسح الكود</string>
    <string name="product_title_placeholder">المنتج</string>
    <string name="product_price_placeholder">000</string>
    <string name="yemeni_rail">ريال</string>
    <string name="product_number_placeholder">0000000000000</string>
    <string name="product_date_placeholder">00/00/0000</string>
    <string name="date_placeholder">التاريخ</string>
    <string name="delete_button_CD">Delete Button</string>
    <string name="edit_button_CD">Edit Button</string>
    <string name="lorem_ipsum">لوريم إيبسوم(Lorem Ipsum) هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) ويُستخدم في صناعات المطابع ودور النشر.</string>
    <string name="add_product_title">إضافة منتج</string>
    <string name="edit_product_title">تعديل منتج</string>
    <string name="p_name_hint">اسم المنتج</string>
    <string name="p_price_hint">السعر</string>

</resources>
