<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".ResultActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/product_details_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="13pt"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/product_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bg"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="7dp"
            app:layout_constraintTop_toBottomOf="@id/app_name">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/almarai_bold"
                android:gravity="center_horizontal"
                android:text="@string/product_title_placeholder"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/product_price_placeholder"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textColor="@color/main_color"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/yemeni_rail"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="9pt"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/double_btn_bg"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/edit_button_CD"
                    android:src="@drawable/ic_edit" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="30dp"

                    android:layout_marginVertical="5dp"
                    android:background="@drawable/btn_bg" />

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/delete_button_CD"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/product_no_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bg"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="7dp"
            app:layout_constraintTop_toBottomOf="@id/product_top">

            <TextView
                android:id="@+id/product_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/product_number_placeholder"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="9pt"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_date_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bg"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/product_no_section">


            <TextView
                android:id="@+id/product_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="start"
                android:letterSpacing="0.1"
                android:text="@string/product_date_placeholder"
                android:textColor="@color/main_color"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/product_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/date_placeholder"
                android:textColor="@color/main_color"
                android:textSize="9pt"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_bg"
            android:elevation="4dp"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/product_date_section">

            <TextView
                android:id="@+id/product_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/main_color"
                android:textSize="9pt" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>