<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_bg"
    android:fillViewport="false"
    tools:context=".AddProductActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/edit_product_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="13pt"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/product_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/btn_bg"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/edit_product_name_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_box_bg"
                android:hint="@string/p_name_hint"
                android:inputType="text"
                android:padding="20dp" />

            <EditText
                android:id="@+id/edit_product_price_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_box_bg"
                android:hint="@string/p_price_hint"
                android:inputType="number"
                android:padding="20dp" />

            <EditText
                android:id="@+id/edit_product_date_et"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_box_bg"
                android:hint="@string/pattern_placeholder"
                android:inputType="date"
                android:padding="20dp" />


            <EditText
                android:id="@+id/edit_product_notes_et"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_box_bg"
                android:hint="@string/lorem_ipsum"
                android:inputType="textMultiLine"
                android:paddingHorizontal="20dp" />

            <Button
                android:id="@+id/edit_product_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:background="@drawable/double_btn_bg"
                android:fontFamily="@font/almarai_bold"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/edit_product_title"
                android:textColor="@color/white"

                android:textSize="8pt" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>